feat: add js for slider pagination

--- a/museum/style.css
+++ b/museum/style.css
@@ -256,6 +256,8 @@ section {
 .slider-imgs {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+
 }
 
 .slider-imgs > div {
@@ -264,6 +266,14 @@ section {
   background-position: center center;
   height: 100%;
   width: 100%;
+}
+
+.slide {
+  display: none;
+}
+
+.slide.active-slide {
+  display: block;
 }
 
 .slider-ctrls {
@@ -277,6 +287,7 @@ section {
   color: #FFFFFF;
   align-items: center;
   padding: 0 75px;
+  z-index: 100;
 }
 
 .slide-number {
@@ -305,7 +316,7 @@ section {
   height: 16px;
   background-color: #FFFFFF;
   cursor: pointer;
-  transition-duration: 400ms;
+  transition-duration: 500ms;
 }
 
 .slider-bullet:hover{
@@ -316,12 +327,12 @@ section {
   color: #CAAA7D;
 }
 
-.active {
+.active-slide-bullet {
   background-color: #D2B183;
 }
 
 .slider-btns {
-  height: 16px;
+  height: 40px;
   width: 80px;
   display: flex;
   justify-content: space-between;
@@ -343,7 +354,6 @@ section {
 .hidden {
   opacity: 0;
   transition-duration: 500ms;
-
 }
 
 .slider-btn:hover {
@@ -1125,10 +1135,14 @@ iframe {
 
 .popup-background.hidden {
   background: none;
+  transition-duration: 500ms;
+
 }
 
 .popup-container.hidden {
   transform: translateX(-100vw);
+  transition-duration: 500ms;
+
 }
 
 .popup-background.delay {
@@ -1760,7 +1774,7 @@ input[type=number] {
   outline: none;
   border: none;
   cursor: pointer;
-  transition-duration: 400ms;
+  transition-duration: 500ms;
 }
 
 .book-btn:hover{
@@ -1782,7 +1796,6 @@ input[type=number] {
   flex-direction: column;
   width: 28px;
   height: 35px;
-  /* border: solid 1px #A4A4A3; */
   overflow: hidden;
   background-color: #FFFFFF;
 }
